--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "dompdf/dompdf": "^3.0",
         "evosys21/pdflib": "^1.1",
         "fpdf/fpdf": "^1.86",
         "laravel/framework": "^11.31",
